2020-01-16: Initial commit
- Creation of the SingleCellMapper

2020-01-28: Expansion of package information
- Created NEWS and DESCRIPTION file

2020-01-31: Added example data
- Created inst/extdata folder with example images and data